--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
 <body>
 
 <div class="container">
-  <header ng-include="'templates/nav.html'"></header>
   <div>
      <div ui-view></div>
   </div>
@@ -63,8 +62,8 @@
   </table>
 </div>-->
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-beta.2/angular.min.js"></script>
-<script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
+<script src="js/vnd/angular.min.js"></script>
+<script src="js/vnd/angular-ui-router.js"></script>
 <script src="js/vnd/angular-sortable-view.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/homeCtrl.js"></script>
