--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,8 @@
 <script src="js/controllers/homeCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
 <script src="js/controllers/iphoneCtrl.js"></script>
+<script src="js/controllers/ipadCtrl.js"></script>
+<script src="js/controllers/macbookCtrl.js"></script>
 <script src="js/directives/iphone4.js"></script>
 <!--<script src="controllers/controller.js"></script>-->
 </body>
