create several sections for macbooks

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,10 @@
 <script src="js/controllers/iphoneCtrl.js"></script>
 <script src="js/controllers/ipadCtrl.js"></script>
 <script src="js/controllers/macbookCtrl.js"></script>
+<script src="js/controllers/macbookProCtrl.js"></script>
+<script src="js/controllers/macbookAirCtrl.js"></script>
+<script src="js/controllers/macbookSimpleCtrl.js"></script>
+<script src="js/controllers/imacCtrl.js"></script>
 <script src="js/directives/iphone4.js"></script>
 <!--<script src="controllers/controller.js"></script>-->
 </body>
