--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
 <script src="js/controllers/ipadCtrl.js"></script>
 <script src="js/controllers/macbookCtrl.js"></script>
 <script src="js/controllers/macbookProCtrl.js"></script>
+<script src="js/controllers/macbookProRetinaCtrl.js"></script>
 <script src="js/controllers/macbookAirCtrl.js"></script>
 <script src="js/controllers/macbookSimpleCtrl.js"></script>
 <script src="js/controllers/imacCtrl.js"></script>
